<resources>
    <string name="app_name">heesoo</string>
    <string name="register_text">Register New User</string>
    <string name="enter_name">Please Enter your name</string>
    <string name="enter_username">Please Enter User Name</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_repeat_password">Please re-enter Password</string>
    <string name="enter_email">Please Enter Email address</string>
    <string name="enter_address">Please enter Address</string>
    <string name="register_submit">Submit</string>
    <string name="enter_phone">Enter Phone Number</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="request_a_task">Request A Task</string>
    <string name="provide_a_task">Provide A Task</string>
    <string name="enter_task_name">Enter Task Name</string>
    <string name="add_a_task">Add A Task</string>
    <string name="save">Save</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="biddername">bidderName</string>
    <string name="deletetask">deleteTask</string>
    <string name="declinebid">declineBid</string>
    <string name="title_activity_maps">Map</string>


</resources>
